# ImportHg-DoubutsuShogi

./: .hgignore  bootstrap.sh  configure.ac  setuplinks.sh
Include/DoubutsuShogi/.Config/: ConfiguredDoubutsuShogi.h.in
Include/DoubutsuShogi/Common/: DoubutsuShogiTypes.h
Include/DoubutsuShogi/Game/: BoardState.h  DoubutsuShogiTypes.h  GameController.h  InternalTypes.h
Include/DoubutsuShogi/Interface/: GameController.h  GameStatus.h  ViewBuffer.h
Lib/: Makefile.am
Lib/.Config/: Makefile.am
Lib/.LinkerScript/: dsgGame.in  dsgInterface.in
Lib/Common/: Makefile.am
Lib/Game/: BoardState.cpp  GameController.cpp  Makefile.am
Lib/Game/Tests/: BoardStateTest.cpp  GameControllerTest.cpp  Makefile.am  TestConf.mak
Lib/Interface/: GameController.cpp  Makefile.am
Lib/Interface/Tests/: GameControllerTest.cpp  TestConf.mak
Lib/Tests/: Makefile.am  TestConf.mak  TestDriver.cpp  TestDriver.h
Lib/Tests/.TestsCommon/: Makefile.am
