
SRCTOPDIR       =  @top_srcdir@
INCTOPDIR       =  $(SRCTOPDIR)/Include/DoubutsuShogi
INCLIBDIR       =  $(INCTOPDIR)/.Config

CNF_SRCTOPDIR   =  @top_builddir@
CNF_INCTOPDIR   =  $(CNF_SRCTOPDIR)/Include/DoubutsuShogi
CNF_INCLIBDIR   =  $(CNF_INCLIBDIR)/.Config


NOINSTHEADERS        =

INCLIBHEADERS        =  \
        $(INCLIBDIR)/DoubutsuShogiSettings.h

NODISTHEADERS        =


dshogi_includedir              =  $(includedir)/DoubutsuShogi
dshogi_include_HEADERS         =  $(INCLIBHEADERS)
dist_noinst_HEADERS            =  $(NOINSTHEADERS)

dshogi_libdir                  =  $(libdir)
dshogi_config_libdir           =  $(dshogi_libdir)/.Config
dshogi_config_lib_LTLIBRARIES  =
dshogi_config_lib_LIBRARIES    =

nodist_dshogi_include_HEADERS  =  $(NODISTHEADERS)

